# Machine-Learning-Toolkit

./: .gitignore  .travis.yml  CMakeLists.txt  Classification_Algorithms_System.cbp  Classification_Algorithms_System.depend  Classification_Algorithms_System.layout  Example  NOTES  README.md  RFE.cpp  _classifier_8hpp.html  _classifier_8hpp__dep__incl.dot  _classifier_8hpp__dep__incl.md5  _classifier_8hpp__incl.dot  _classifier_8hpp__incl.md5  _classifier_8hpp_source.html  _data_8cpp.html  _data_8cpp__incl.dot  _data_8cpp__incl.map  _data_8cpp__incl.md5  _data_8hpp.html  _data_8hpp__dep__incl.dot  _data_8hpp__dep__incl.map  _data_8hpp__dep__incl.md5  _data_8hpp__incl.dot  _data_8hpp__incl.map  _data_8hpp__incl.md5  _data_8hpp_source.html  _dual_classifier_8hpp.html  _dual_classifier_8hpp__dep__incl.dot  _dual_classifier_8hpp__dep__incl.md5  _dual_classifier_8hpp__incl.dot  _dual_classifier_8hpp__incl.md5  _dual_classifier_8hpp_source.html  _feature_selection_8hpp_source.html  _i_m_a_8hpp.html  _i_m_a_8hpp__incl.dot  _i_m_a_8hpp__incl.md5  _i_m_a_8hpp_source.html  _kernel_8hpp.html  (+325 more)
.Old_system/: CMakeLists.txt  README.md  adaboost.cpp  adaboost.h  adaboostdual.cpp  adaboostdual.h  almap.cpp  almap.h  aos.cpp  aos.h  aos_hash.cpp  aos_hash.h  aos_heap.cpp  aos_heap.h  data.cpp  data.h  embrapa.cpp  embrapa.h  fisher.cpp  fisher.h  fs  golub.cpp  golub.h  imadual.cpp  imadual.h  imap.cpp  imap.h  kernel.cpp  kernel.h  main.cpp  makefile  perceptron.cpp  perceptron.h  pl.cpp  pl.h  rfe.cpp  rfe.h  sample.cpp  smo.cpp  smo.h  (+2 more)
DB/: iris  pta-prod-leite.txt
Doc/: Doxyfile  (+3 more)
(+952 files in other folders)
